# nova-lang

./: .gitignore  Cargo.toml  Config.ndl  README.md  config.ndl
docs/: gpt_message.md
examples/: bp.nova  control_flow.nova  dnd.nova  employee.nova  hello.nova  math.nova
ndl-parser/: Cargo.toml
ndl-parser/src/: lib.rs
src/: main.rs
src/config/: mod.rs
src/lexer/: mod.rs  token.rs  token_word.rs
src/parser/: binding_power.rs  common.rs  expr.rs  grammar.md  mod.rs  stmt.rs
