[package]
name = "nova-lang"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
colour = "2.1.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
strum = "0.26.3"
strum_macros = "0.26.4"
ndl-parser = { path = "ndl-parser" }
